убраны файлы миграций

--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=2a8034b6ef0fe4f0a3c241c51ab3dff9
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://nebelschwimmer:12345678@localhost:5432/train"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/train"
 
 
 
